# zero2prod

./: Cargo.toml  README.md
migrations/: 20230616095321_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
