[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"]}
reqwest = "0.11.18"
serde = {version = "1.0.164", features = ["derive"]}
config = "0.11.0"
[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]